--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>17</maven.compiler.target>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <assertj.version>3.23.1</assertj.version>
 
     </properties>
 
@@ -29,6 +30,10 @@
             <version>7.6.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+        </dependency>
     </dependencies>
 </project>
