--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -65,6 +65,11 @@
             <version>5.3.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.11.0</version>
+        </dependency>
 
     </dependencies>
 </project>
